# network-shapes-drawer-cpp

./: CMakeLists.txt  Doxyfile  Rapport de Projet de Synthèse.docx  const.h  couleur.cpp  couleur.h  main.cpp  rapport.odt  uml.class.violet.html
affichage/: affichagedistant.cpp  affichagedistant.h  afficheur.h  clientreseau.cpp  clientreseau.h
chargerDonnees/: ChargerDonnees.h  ChargerDonneesCOR.cpp  ChargerDonneesCOR.h  ChargerDonneesCercle.cpp  ChargerDonneesCercle.h  ChargerDonneesGroupe.cpp  ChargerDonneesGroupe.h  ChargerDonneesPolygone.cpp  ChargerDonneesPolygone.h  ChargerDonneesSegment.cpp  ChargerDonneesSegment.h  ChargerDonneesTriangle.cpp  ChargerDonneesTriangle.h
exceptions/: GroupeException.h  argumentexception.h  chargementexception.h  modificationgroupeexception.h  socketexception.h
formes/: base.cpp  base.h  cercle.cpp  cercle.h  forme.cpp  forme.h  groupe.cpp  groupe.h  modificateurforme.cpp  modificateurforme.h  polygone.cpp  polygone.h  sauveurforme.cpp  sauveurforme.h  segment.cpp  segment.h  triangle.cpp  triangle.h  visiteurforme.h
geometrie/: point.cpp  point.h  vecteur.cpp  vecteur.h
sauvegarde/: ChargerDonnees.h  ChargerDonneesCOR.cpp  ChargerDonneesCOR.h  ChargerDonneesCercle.cpp  ChargerDonneesCercle.h  ChargerDonneesGroupe.cpp  ChargerDonneesGroupe.h  ChargerDonneesPolygone.cpp  ChargerDonneesPolygone.h  ChargerDonneesSegment.cpp  ChargerDonneesSegment.h  ChargerDonneesTriangle.cpp  ChargerDonneesTriangle.h  ChargerDonnesForme.cpp  ChargerDonnesForme.h  (+4 more)
tests/: CMakeLists.txt  formes.cpp
tests/formes/: cercle.cpp  groupe.cpp  polygone.cpp  segment.cpp  triangle.cpp
tests/geometrie/: point.cpp  vecteur.cpp
tests/transformations/: homothetie.cpp  rotation.cpp  translation.cpp
(+23 files in other folders)
